# husk-app

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
husk-cef-spike/: Cargo.toml
husk-cef-spike/src/: main.rs
scripts/: setup-cef.sh
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  service.rs  settings.rs  webview.rs
src-tauri/src/domain/: mod.rs  service.rs  settings.rs
src-tauri/src/infra/: mod.rs  storage.rs  webview.rs
src/lib/: ipc.ts
src/lib/components/: ServiceIcon.svelte  Sidebar.svelte
src/lib/stores/: activeService.ts  services.ts
src/lib/types/: service.ts  settings.ts
